--- a/app/res/values/dimens.xml
+++ b/app/res/values/dimens.xml
@@ -88,7 +88,8 @@
     <dimen name="recent_task_width">432dp</dimen>
 
     <!-- Calm mode sizes -->
-    <dimen name="calm_mode_padding">12dp</dimen>
+    <dimen name="calm_mode_padding_vertical">12dp</dimen>
+    <dimen name="calm_mode_padding_horizontal">12dp</dimen>
     <dimen name="calm_mode_icon_size_regular">32dp</dimen>
     <dimen name="calm_mode_icon_size_small">16dp</dimen>
     <dimen name="calm_mode_icon_margin">4dp</dimen>
