--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -86,53 +86,50 @@
         <item name="cornerSize">8dp</item>
     </style>
 
-    <style name="CalmMode">
-    </style>
-
-    <style name="CalmMode.Text" parent="CalmMode">
+    <style name="CalmModeText" parent="TextAppearance.Car.Body.Medium">
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">@dimen/calm_mode_text_size</item>
-        <item name="android:minHeight">@dimen/calm_mode_icon_size_regular</item>
     </style>
 
-    <style name="CalmMode.Icon" parent="CalmMode">
+    <style name="CalmModeIcon">
         <item name="android:layout_width">@dimen/calm_mode_icon_size_regular</item>
         <item name="android:layout_height">@dimen/calm_mode_icon_size_regular</item>
         <item name="android:scaleType">fitCenter</item>
         <item name="android:tint">@android:color/white</item>
     </style>
 
-    <style name="CalmMode.BackgroundImage" parent="CalmMode">
+    <style name="CalmModeBackgroundImage">
         <item name="android:src">@android:color/black</item>
         <item name="android:scaleType">centerCrop</item>
     </style>
 
-    <style name="CalmMode.Text.Date" parent="CalmMode.Text">
+    <style name="CalmModeText.Date">
         <item name="android:format12Hour">EE, MMM dd</item>
         <item name="android:format24Hour">EE, MMM dd</item>
     </style>
 
-    <style name="CalmMode.Text.MediaTitle" parent="CalmMode.Text">
+    <style name="CalmModeText.MediaTitle">
         <item name="android:ellipsize">end</item>
         <item name="android:maxWidth">300dp</item>
         <item name="android:maxLines">2</item>
         <item name="android:textAlignment">viewStart</item>
     </style>
 
-    <style name="CalmMode.Text.Clock" parent="CalmMode.Text">
+    <style name="CalmModeClock" parent="TextAppearance.Car.Display">
+        <item name="android:fontFamily">roboto-flex</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">200sp</item>
+        <item name="android:lineHeight">180sp</item>
         <item name="android:gravity">center</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:textSize">200sp</item>
         <item name="android:lineSpacingMultiplier">0.75</item>
         <item name="android:format12Hour">hh\nmm</item>
         <item name="android:format24Hour">HH\nmm</item>
         <item name="android:letterSpacing">0.02</item>
         <item name="android:lineSpacingExtra">-10sp</item>
         <item name="android:fontVariationSettings">"'wght' 100, 'wdth' 10"</item>
-        <item name="android:fontFamily">roboto-flex</item>
     </style>
 
-    <style name="CalmMode.Icon.Temperature" parent="CalmMode.Icon">
+    <style name="CalmModeIcon.Temperature">
         <item name="android:layout_width">@dimen/calm_mode_icon_size_small</item>
         <item name="android:layout_height">@dimen/calm_mode_icon_size_small</item>
     </style>
