Add drag and drop to dock items
- Give circular shape to app icon and add borders
- Excite the view when the drop is over the drop region
- Move the drop(dragsurface) to the correct location and transform its
  size

Bug: 309529418
Bug: 301482374
Test: manual, attached video in bug, atest CarDockLibTests
Change-Id: I016d60d3d48eb1c93017ce6327dd8cf58f38ed53

--- a/docklib/res/values/config.xml
+++ b/docklib/res/values/config.xml
@@ -26,4 +26,6 @@
         <item>com.android.car.dialer/com.android.car.dialer.ui.TelecomActivity</item>
         <item>com.google.android.apps.maps/com.google.android.maps.MapsActivity</item>
     </string-array>
+
+    <integer name="drag_drop_animate_in_duration">800</integer>
 </resources>
