--- a/docklib/res/layout/dock_app_item_view.xml
+++ b/docklib/res/layout/dock_app_item_view.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2023 The Android Open Source Project
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,12 +14,11 @@
     limitations under the License.
 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:id="@+id/dock_item_container"
+    style="@style/ItemContainer">
 
-        <ImageView
-            android:id="@+id/dock_app_icon"
-            android:layout_width="@dimen/dock_item_size"
-            android:layout_height="@dimen/dock_item_size"
-            android:contentDescription="@null" />
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/dock_app_icon"
+        style="@style/AppIcon"
+        android:contentDescription="@null" />
 </FrameLayout>
