Add pin shortcut to Dock items
Bug: 313655199
Bug: 301482374
Test: manual, attached video in bug, atest CarDockLibTests CarDockUtilLibTests
Change-Id: I77f37e802656b4c73bbd7b04ae3ade4e404a2d3c

--- a/docklib/res/values/dimens.xml
+++ b/docklib/res/values/dimens.xml
@@ -21,7 +21,8 @@
     <dimen name="dock_item_size">72dp</dimen>
     <dimen name="dock_item_spacing">2dp</dimen>
 
-    <dimen name="icon_stroke_width">6dp</dimen>
+    <dimen name="static_icon_stroke_width">0dp</dimen>
+    <dimen name="dynamic_icon_stroke_width">6dp</dimen>
     <dimen name="icon_stroke_width_excited">30dp</dimen>
 
 </resources>
