Add excite animations to dock items
Dock items are excited when a potential droppable item is dragged over
it. This change adds animation to make the excitement smoother.

Bug: 312737692
Bug: 301482374
Test: atest CarDockLibTests, added video to the bug
Change-Id: I84a2a6868ee65f381c570c34de0a89677257b6d4

--- a/docklib/res/values/config.xml
+++ b/docklib/res/values/config.xml
@@ -39,4 +39,5 @@
     </string-array>
 
     <integer name="drag_drop_animate_in_duration">800</integer>
+    <integer name="excite_icon_animation_duration">100</integer>
 </resources>
