--- a/docklib/res/values/colors.xml
+++ b/docklib/res/values/colors.xml
@@ -14,6 +14,8 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <resources>
+    <!-- todo(b/314859977): reset color to #000000 -->
     <color name="icon_default_stroke_color">#FFFFFF</color>
+    <color name="icon_static_stroke_color">#000000</color>
     <color name="icon_excited_stroke_color">#737272</color>
 </resources>
