--- a/docklib/res/values/styles.xml
+++ b/docklib/res/values/styles.xml
@@ -28,6 +28,7 @@
         <item name="android:scaleType">centerCrop</item>
         <item name="android:adjustViewBounds">false</item>
         <item name="shapeAppearanceOverlay">@style/AppIcon.RoundedBorder</item>
+        <item name="strokeWidth">@dimen/icon_stroke_width</item>
     </style>
 
     <style name="AppIcon.RoundedBorder">
