--- a/docklib/res/values/config.xml
+++ b/docklib/res/values/config.xml
@@ -38,6 +38,14 @@
         <item>com.google.android.carassistant/com.google.android.libraries.assistant.auto.tng.assistant.ui.activity.AutoAssistantActivity</item>
     </string-array>
 
-    <integer name="drag_drop_animate_in_duration">800</integer>
-    <integer name="excite_icon_animation_duration">100</integer>
+    <!--
+    During drag and drop, when an item is dropped there are two consecutive animations:
+    1. move to the proper location and to a scaled down version (scale down)
+    2. change from the scaled down version to the final scale version (scale up)
+    -->
+    <integer name="drop_animation_scale_down_duration_ms">600</integer>
+    <integer name="drop_animation_scale_up_duration_ms">300</integer>
+
+    <!-- Duration of animation for when item is dragged over the drop location. -->
+    <integer name="excite_icon_animation_duration_ms">100</integer>
 </resources>
