Add configurable tos banner dismissal strategy
- Configurable value in days to resurface tos banner after dismissing from app grid

Bug: 277235742
Test: atest AppGridActivityTest
Change-Id: I78ec7ae58e88a4fdbf21a38cf1b716a7c890bfc1

--- a/libs/appgrid/lib/res/values/config.xml
+++ b/libs/appgrid/lib/res/values/config.xml
@@ -39,4 +39,10 @@
         msg_mirroring_redirect_uri_key
     </string>
 
+    <!--- The number of days to wait before resurfacing the terms of service banner
+         on the app grid after being dismissed
+
+         * Integer value 0 implies to show the banner after every reboot
+   -->
+    <integer name="config_tos_banner_resurface_time_days">0</integer>
 </resources>
