--- a/docklib/res/values/config.xml
+++ b/docklib/res/values/config.xml
@@ -21,10 +21,10 @@
 
     <!-- A list of components that are shown on Dock by default -->
     <string-array name="config_defaultDockApps" translatable="false">
-        <item>com.android.vending/com.google.android.finsky.carmainactivity.MainActivity</item>
         <item>com.android.car.settings/com.android.car.settings.Settings_Launcher_Homepage</item>
         <item>com.android.car.dialer/com.android.car.dialer.ui.TelecomActivity</item>
-        <item>com.google.android.apps.maps/com.google.android.maps.MapsActivity</item>
+        <item>com.android.contacts/com.android.contacts.activities.PeopleActivity</item>
+        <item>com.android.car.messenger/com.android.car.messenger.core.ui.launcher.MessageLauncherActivity</item>
     </string-array>
 
     <!-- A list of components that are excluded from being shown on Dock -->
