Fix drop animations and icon size
Bug: 319293364
Bug: 301482374
Test: manual, added video to bug, atest CarDockLibTests
Change-Id: If5ceb7aa069bb4845f161f1702a7c5e330ce619d

--- a/docklib/res/values/dimens.xml
+++ b/docklib/res/values/dimens.xml
@@ -21,7 +21,8 @@
     <dimen name="dock_item_size">72dp</dimen>
     <dimen name="dock_item_spacing">2dp</dimen>
 
-    <dimen name="icon_stroke_width">6dp</dimen>
+    <dimen name="icon_stroke_width_static">0dp</dimen>
+    <dimen name="icon_stroke_width_dynamic">6dp</dimen>
     <dimen name="icon_stroke_width_excited">20dp</dimen>
 
     <item name="icon_colorFilter_alpha_excited" format="float" type="dimen">0.3</item>
