--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -86,13 +86,11 @@
         <item name="cornerSize">8dp</item>
     </style>
 
-    <style name="CalmModeText" parent="TextAppearance.Car.Body.Medium">
+    <style name="CalmModeText" parent="TextAppearance.Car.Body.Small">
         <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="CalmModeIcon">
-        <item name="android:layout_width">@dimen/calm_mode_icon_size_regular</item>
-        <item name="android:layout_height">@dimen/calm_mode_icon_size_regular</item>
         <item name="android:scaleType">fitCenter</item>
         <item name="android:tint">@android:color/white</item>
     </style>
@@ -103,35 +101,35 @@
     </style>
 
     <style name="CalmModeText.Date">
+        <item name="android:textColor">@color/car_outline</item>
         <item name="android:format12Hour">EE, MMM dd</item>
         <item name="android:format24Hour">EE, MMM dd</item>
     </style>
 
     <style name="CalmModeText.MediaTitle">
+        <item name="android:textColor">@color/car_outline</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:maxWidth">300dp</item>
+        <item name="android:maxWidth">1024dp</item>
         <item name="android:maxLines">2</item>
-        <item name="android:textAlignment">viewStart</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="CalmModeText.Temperature">
+        <item name="android:textColor">@color/car_outline</item>
     </style>
 
     <style name="CalmModeClock" parent="TextAppearance.Car.Display">
         <item name="android:fontFamily">roboto-flex</item>
+        <item name="android:fontVariationSettings">"'wght' 300, 'wdth' 100, 'xtra' 468, 'xopq' 96, 'yopq' 79, 'ytuc' 712, 'ytas' 750, 'ytde' -203, 'ytfi' 738, 'opsz' 144"</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">200sp</item>
-        <item name="android:lineHeight">180sp</item>
-        <item name="android:gravity">center</item>
+        <item name="android:textSize">300sp</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:lineSpacingMultiplier">0.75</item>
-        <item name="android:format12Hour">hh\nmm</item>
-        <item name="android:format24Hour">HH\nmm</item>
-        <item name="android:letterSpacing">0.02</item>
-        <item name="android:lineSpacingExtra">-10sp</item>
-        <item name="android:fontVariationSettings">"'wght' 100, 'wdth' 10"</item>
-    </style>
+        <item name="android:format12Hour">hh:mm</item>
+        <item name="android:format24Hour">HH:mm</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:lineSpacingMultiplier">1</item>
+        <item name="android:lineSpacingExtra">0pt</item>
 
-    <style name="CalmModeIcon.Temperature">
-        <item name="android:layout_width">@dimen/calm_mode_icon_size_small</item>
-        <item name="android:layout_height">@dimen/calm_mode_icon_size_small</item>
     </style>
 
 </resources>
