--- a/docklib/res/layout/dock_view.xml
+++ b/docklib/res/layout/dock_view.xml
@@ -22,5 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
+            android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </merge>
