Add App Info and Force Stop shortcuts to Dock items
Extracted the shortcuts outside the AppGrid lib to a new lib
to be shared with the Dock lib.
Most logic should be the same, just converted to Kotlin.
Removed some callbacks from forcestop shortcut.
Removed closing forcestop dialog on driving state change.
Added uni tests for forcestop.

Bug: 313655199
Bug: 301482374
Test: manual
atest CarDockLibTests CarDockUtilLibTests CarLauncherCommonTests

Change-Id: Ia6a3f5c5e59f497cc0daf5e79a8386f8526ab05e

--- a/libs/car-launcher-common/res/values/colors.xml
+++ b/libs/car-launcher-common/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (C) 2023 The Android Open Source Project
+  ~ Copyright (C) 2024 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,13 +15,5 @@
   ~ limitations under the License.
   -->
 <resources>
-    <color name="icon_tint">#FFF8F9FA</color>
-    <color name="recent_apps_line_divider_color">#1FFFFFFF</color>
-    <color name="page_indicator_bar_color">#FF66B5FF</color>
-    <color name="app_item_on_hover_border_color">#FF66B5FF</color>
-    <color name="app_item_on_hover_background_color">#3D66B5FF</color>
-    <color name="app_name_color">#FFE8EAED</color>
-    <color name="banner_background_color">#2E3134</color>
-    <color name="banner_button_text_color">#66B5FF</color>
-    <color name="banner_title_text_color">#FFFFFF</color>
+    <color name="shortcuts_icon_color">#FFFFFFFF</color>
 </resources>
